--- a/data/learn.yaml
+++ b/data/learn.yaml
@@ -5,7 +5,7 @@
       logo: '/logos/learn/cryptozombies.png'
       url: 'https://cryptozombies.io/'
       description: 'CryptoZombies is The Most Popular, Interactive Solidity Tutorial That Will Help You Learn Blockchain Programming on Ethereum by Building Your Own Fun Game with Zombies — Master Blockchain Development with Web3, Infura, Metamask & Ethereum Smart Contractsand Become a Blockchain Developer in Record Time!.'
-    - title: 'blockchain.education'
+    - title: 'blockchain education'
       logo: '/logos/learn/blockchaineducation.png'
       url: 'https://blockchain.education/'
       description: 'Dive into blockchain and smart contract development.'
