--- a/data/fund.yaml
+++ b/data/fund.yaml
@@ -1,6 +1,10 @@
 - name: 'Exchanges'
   id: 'exchanges'
   items:
+    - title: 'Binance'
+      logo: '/logos/binance.png'
+      url: 'https://www.binance.com/'
+      description: 'Binance cryptocurrency exchange - We operate the worlds biggest bitcoin exchange and altcoin crypto exchange in the world by volume'
     - title: 'Coinbase'
       logo: '/logos/coinbase.png'
       url: 'https://www.coinbase.com/'
@@ -9,6 +13,14 @@
       logo: '/logos/crypto.com.png'
       url: 'https://crypto.com/'
       description: 'Crypto.com is on a mission to accelerate the world’s transition to cryptocurrency. Through the Crypto.com Mobile App and Exchange, you can buy 150+ cryptocurrencies and stablecoins, such as Bitcoin (BTC), Ethereum (ETH), Cardano (ADA), Solana (SOL) and etc. Purchase with a credit card, debit card, crypto, or fiat bank transfer. Our ecosystem consists of financial services, payment solutions, a world-class trading platform, and decentralised finance offerings.'
+    - title: 'eToro'
+      logo: '/logos/etoro.png'
+      url: 'https://etoro.com/'
+      description: 'Trade and invest in a diversified portfolio, starting at $10, or practise risk-free with a virtual portfolio. Join eToro’s 25M user community.'
+    - title: 'Kraken'
+      logo: '/logos/kraken.png'
+      url: 'https://kraken.com/'
+      description: 'Kraken is more than just a Bitcoin trading platform. Come see why our cryptocurrency exchange is the best place to buy, sell, trade and learn about crypto.'
     - title: 'Robinhood'
       logo: '/logos/robinhood.png'
       url: 'https://robinhood.com/'
@@ -17,22 +29,10 @@
       logo: '/logos/paypal.png'
       url: 'https://www.paypal.com/'
       description: 'PayPal is the faster, safer way to send money and make an online payment or set up a merchant account.'
-    - title: 'Binance'
-      logo: '/logos/binance.png'
-      url: 'https://www.binance.com/'
-      description: 'Binance cryptocurrency exchange - We operate the worlds biggest bitcoin exchange and altcoin crypto exchange in the world by volume'
-    - title: 'eToro'
-      logo: '/logos/etoro.png'
-      url: 'https://etoro.com/'
-      description: 'Trade and invest in a diversified portfolio, starting at $10, or practise risk-free with a virtual portfolio. Join eToro’s 25M user community.'
     - title: 'SoFi'
       logo: '/logos/sofi.png'
       url: 'https://www.sofi.com/'
       description: 'Want an easier way to take control of your finances? From getting debt free to growing your investments, we are here to help you get your money right.'
-    - title: 'Kraken'
-      logo: '/logos/kraken.png'
-      url: 'https://kraken.com/'
-      description: 'Kraken is more than just a Bitcoin trading platform. Come see why our cryptocurrency exchange is the best place to buy, sell, trade and learn about crypto.'
 
 - name: 'Other Protocols'
   id: 'other-protocols'
@@ -41,10 +41,6 @@
       logo: '/logos/deBridge.png'
       url: 'https://debridge.finance/'
       description: 'deBridge is a cross-chain interoperability and liquidity transfer protocol that allows decentralized transfer of data and assets between various blockchains.'
-    - title: 'Tornado Cash'
-      logo: '/logos/tornado-cash.png'
-      url: 'https://tornado.cash/'
-      description: 'Non-custodial Ethereum Privacy solution.'
     - title: 'Substrate'
       logo: '/logos/substrate.png'
       url: 'https://substrate.io/'
@@ -53,15 +49,19 @@
 - name: 'Faucets'
   id: 'faucets'
   items:
-    - title: 'EVM Faucets'
+    - title: 'Chainlink Faucet'
       logo: '/logos/faucets.png'
       url: 'https://faucets.chain.link/'
       description: 'Get testnet LINK for an account on one of the supported blockchain testnets so you can create and test your own oracle and Chainlinked smart contract.'
+    - title: 'Goerli Authenticated Faucet'
+      logo: '/logos/goerli_faucet.png'
+      url: 'https://goerli-faucet.mudit.blog/'
+      description: ''
+    - title: 'Sepolia Pow Faucet'
+      logo: '/logos/sepolia_pow.jpeg'
+      url: 'https://sepolia-faucet.pk910.de/'
+      description: ''
     - title: 'Sol Faucet'
       logo: '/logos/sol-faucet.png'
       url: 'https://solfaucet.com/'
       description: ''
-    - title: 'Terra Faucet'
-      logo: '/logos/terra-faucet.png'
-      url: 'https://faucet.terra.money/'
-      description: 'Terra Faucet'
