--- a/data/learn.yaml
+++ b/data/learn.yaml
@@ -1,43 +1,50 @@
 - name: 'General Learning Resources'
   id: 'general-learning-resources'
   items:
-    - title: 'CryptoZombies'
-      logo: '/logos/learn/cryptozombies.png'
-      url: 'https://cryptozombies.io/'
-      description: 'CryptoZombies is The Most Popular, Interactive Solidity Tutorial That Will Help You Learn Blockchain Programming on Ethereum by Building Your Own Fun Game with Zombies — Master Blockchain Development with Web3, Infura, Metamask & Ethereum Smart Contractsand Become a Blockchain Developer in Record Time!.'
     - title: 'blockchain education'
       logo: '/logos/learn/blockchaineducation.png'
       url: 'https://blockchain.education/'
       description: 'Dive into blockchain and smart contract development.'
-    - title: 'Web3 University'
-      logo: '/logos/learn/web3university.png'
-      url: 'https://www.web3.university/'
-      description: 'The comprehensive educational resource on blockchain development with the most useful tutorials across the web3 ecosystem. Partnering with a16z, Alchemy, Polygon, Pantera, Chainshot, Offchain Labs, and many more.'
-    - title: 'Eth.Build'
-      logo: '/logos/learn/ethbuild.png'
-      url: 'https://eth.build/'
-      description: 'Educational sandbox for prototyping Web3. Learn Ethereum visually with drag-and-drop programming.'
-    - title: 'YouTube'
-      logo: '/logos/learn/youtube.png'
-      url: 'https://www.youtube.com/'
-      description: 'Enjoy the videos and music you love, upload original content, and share it all with friends, family, and the world on YouTube.'
-    - title: 'FreeCodeCamp'
-      logo: '/logos/learn/freecodecamp.png'
-      url: 'https://www.freecodecamp.org/'
-      description: 'Learn to Code — For Free'
     - title: 'Chainshot'
       logo: '/logos/learn/chainshot.png'
       url: 'https://www.chainshot.com/'
       description: 'Fast-track your Ethereum Developer career in an instructor-led and challenging bootcamp focused on discussion and application!'
-    - title: 'Ivan On Tech'
+    - title: 'CryptoZombies'
+      logo: '/logos/learn/cryptozombies.png'
+      url: 'https://cryptozombies.io/'
+      description: 'CryptoZombies is The Most Popular, Interactive Solidity Tutorial That Will Help You Learn Blockchain Programming on Ethereum by Building Your Own Fun Game with Zombies — Master Blockchain Development with Web3, Infura, Metamask & Ethereum Smart Contractsand Become a Blockchain Developer in Record Time!.'
+    - title: 'EatTheBlocks'
+      logo: '/logos/eattheblocks.png'
+      url: 'https://eattheblocks.com/'
+      description: 'Easy-to-follow tutorials to learn Blockchain Development: Ethereum, Solidity, Web3, DeFi.'
+    - title: 'Eth.Build'
+      logo: '/logos/learn/ethbuild.png'
+      url: 'https://eth.build/'
+      description: 'Educational sandbox for prototyping Web3. Learn Ethereum visually with drag-and-drop programming.'
+    - title: 'FreeCodeCamp'
+      logo: '/logos/learn/freecodecamp.png'
+      url: 'https://www.freecodecamp.org/news/search/?query=blockchain%20solidity'
+      description: 'Learn to Code — For Free'
+    - title: 'Ivan on Tech'
       logo: '/logos/learn/ivanontech.png'
-      url: 'https://academy.moralis.io/'
-      description: 'Become a blockchain expert and get certified now with Moralis Academy. We teach developers and beginners how to become Web3 professionals.'
+      url: 'https://ivanontech.teachable.com/'
+      description: ''
     - title: 'Learn X in Y Minutes'
       logo: '/logos/learn/learnxinyminutes.png'
-      url: 'https://learnxinyminutes.com/'
+      url: 'https://learnxinyminutes.com/docs/solidity/'
       description: ''
-
+    - title: 'Moralis Academy'
+      logo: '/logos/learn/moralis_academy.jpeg'
+      url: 'https://academy.moralis.io/'
+      description: 'Become a blockchain expert and get certified now with Moralis Academy. We teach developers and beginners how to become Web3 professionals.'
+    - title: 'Web3 University'
+      logo: '/logos/learn/web3university.png'
+      url: 'https://www.web3.university/'
+      description: 'The comprehensive educational resource on blockchain development with the most useful tutorials across the web3 ecosystem. Partnering with a16z, Alchemy, Polygon, Pantera, Chainshot, Offchain Labs, and many more.'
+    - title: 'YouTube'
+      logo: '/logos/learn/youtube.png'
+      url: 'https://www.youtube.com/results?search_query=smart+contract+development'
+      description: 'Enjoy the videos and music you love, upload original content, and share it all with friends, family, and the world on YouTube.'
 
 - name: '3rd Party Learning Journeys'
   id: 'party-learning-journeys'
@@ -46,10 +53,18 @@
       logo: '/logos/learn/chainlink.png'
       url: 'https://blog.chain.link/category/developers/'
       description: 'Check out the latest developer content, tutorials, and workshops around Chainlink and other leading Blockchain ecosystem projects.'
+    - title: 'ConsenSys'
+      logo: '/logos/learn/consensys.png'
+      url: 'https://consensys.net/developers/10-minute-ethereum-orientation/'
+      description: 'Build next-generation dapps, launch blockchain-based financial infrastructure, and access the decentralized web with ConsenSys&#039; Ethereum product suite.'
     - title: 'Ethereum Foundation'
       logo: '/logos/learn/ethereumfoundation.png'
-      url: 'https://ethereum.org/en/foundation/'
+      url: 'https://ethereum.org/en/learn/'
       description: 'Learn about the Ethereum Foundation (EF), a non-profit organization dedicated to supporting Ethereum and related technologies.'
+    - title: 'OpenZeppelin'
+      logo: '/logos/learn/zeppelin.png'
+      url: 'https://docs.openzeppelin.com/learn/'
+      description: ''
     - title: 'Solana Docs'
       logo: '/logos/learn/solana.png'
       url: 'https://docs.solana.com/'
@@ -58,11 +73,4 @@
       logo: '/logos/learn/solidity.png'
       url: 'https://docs.soliditylang.org/en/v0.8.9/'
       description: ''
-    - title: 'OpenZeppelin'
-      logo: '/logos/learn/zeppelin.png'
-      url: 'https://docs.openzeppelin.com/'
-      description: ''
-    - title: 'ConsenSys'
-      logo: '/logos/learn/consensys.png'
-      url: 'https://consensys.net/'
-      description: 'Build next-generation dapps, launch blockchain-based financial infrastructure, and access the decentralized web with ConsenSys&#039; Ethereum product suite.'
+    
