--- a/data/monitor.yaml
+++ b/data/monitor.yaml
@@ -1,6 +1,22 @@
 - name: 'Monitoring Tools'
   id: 'monitoring-tools'
   items: 
+    - title: 'Blockscout'
+      logo: '/logos/blockscout.png'
+      url: 'https://blockscout.com/'
+      description: null
+    - title: 'Corda'
+      logo: '/logos/corda.png'
+      url: 'https://github.com/corda'
+      description: null
+    - title: 'Dune'
+      logo: '/logos/dune.png'
+      url: 'https://dune.com/'
+      description: null
+    - title: 'Ethernal'
+      logo: '/logos/ethernal.png'
+      url: 'https://github.com/tryethernal'
+      description: null
     - title: 'OpenZeppelin Sentinel'
       logo: '/logos/zeppelin.png'
       url: 'https://docs.openzeppelin.com/defender/sentinel'
@@ -9,57 +25,25 @@
       logo: '/logos/tenderly.png'
       url: 'https://tenderly.co/monitoring/'
       description: null
-    - title: 'Scout'
-      logo: '/logos/scout.png'
-      url: 'https://scout.cool/'
-      description: null
-    - title: 'Ethernal'
-      logo: '/logos/ethernal.png'
-      url: 'https://github.com/tryethernal'
-      description: null
-    - title: 'Blockscout'
-      logo: '/logos/blockscout.png'
-      url: 'https://blockscout.com/xdai/mainnet/'
-      description: null
-    - title: 'Dune'
-      logo: '/logos/dune.png'
-      url: 'https://dune.network/'
-      description: null
-    - title: 'Corda'
-      logo: '/logos/corda.png'
-      url: 'https://github.com/corda'
-      description: null
-    - title: 'Fantom'
-      logo: '/logos/fantom.png'
-      url: 'https://github.com/Fantom-Foundation'
-      description: null
 
 - name: 'Explorers'
   id: 'explorers'
   items: 
-    - title: 'TheGraph'
-      logo: '/logos/thegraph.png'
-      url: 'https://thegraph.com/en/'
+    - title: 'Arbiscan'
+      logo: '/logos/arbiscan.png'
+      url: 'https://arbiscan.io/'
       description: null
-    - title: 'Etherscan'
-      logo: '/logos/etherscan.png'
-      url: 'https://etherscan.io/'
-      description: null
-    - title: 'Solscan'
-      logo: '/logos/solscan.png'
-      url: 'https://solscan.io/'
+    - title: 'Avalanche Explorer'
+      logo: '/logos/avalancheexplorer.png'
+      url: 'https://explorer.avax.network/'
       description: null
     - title: 'BscScan'
       logo: '/logos/bscscan.png'
       url: 'https://bscscan.com/'
       description: null
-    - title: 'PolygonScan'
-      logo: '/logos/polygonscan.png'
-      url: 'https://polygonscan.com/'
-      description: null
-    - title: 'Avalanche Explorer'
-      logo: '/logos/avalancheexplorer.png'
-      url: 'https://explorer.avax.network/'
+    - title: 'Etherscan'
+      logo: '/logos/etherscan.png'
+      url: 'https://etherscan.io/'
       description: null
     - title: 'FTMScan'
       logo: '/logos/ftmscan.png'
@@ -69,11 +53,19 @@
       logo: '/logos/hecoInfo.png'
       url: 'https://hecoinfo.com/'
       description: null
-    - title: 'Arbiscan'
-      logo: '/logos/arbiscan.png'
-      url: 'https://arbiscan.io/'
-      description: null
     - title: 'Optimistic Ethereum'
       logo: '/logos/optimisticethereum.png'
       url: 'https://optimistic.etherscan.io/'
+      description: null
+    - title: 'PolygonScan'
+      logo: '/logos/polygonscan.png'
+      url: 'https://polygonscan.com/'
+      description: null    
+    - title: 'Solscan'
+      logo: '/logos/solscan.png'
+      url: 'https://solscan.io/'
+      description: null
+    - title: 'TheGraph'
+      logo: '/logos/thegraph.png'
+      url: 'https://thegraph.com/en/'
       description: null
