--- a/data/develop.yaml
+++ b/data/develop.yaml
@@ -213,6 +213,10 @@
       logo: '/logos/infura.png'
       url: 'https://infura.io/'
       description: null
+   - title: 'Naas.Link'
+      logo: '/logos/naaslink.png'
+      url: 'https://naas.link/'
+      description: null
     - title: 'Quicknode'
       logo: '/logos/quicknode.png'
       url: 'https://www.quicknode.com/'
