--- a/data/develop.yaml
+++ b/data/develop.yaml
@@ -213,7 +213,7 @@
       logo: '/logos/infura.png'
       url: 'https://infura.io/'
       description: null
-   - title: 'Naas.Link'
+   - title: 'NaaS Link'
       logo: '/logos/naaslink.png'
       url: 'https://naas.link/'
       description: null
